--- a/elasticsearch/elasticsearch-7.17/compose.yaml
+++ b/elasticsearch/elasticsearch-7.17/compose.yaml
@@ -1,7 +1,8 @@
 services:
   elasticsearch:
-    image: elasticsearch:7.17.28
+    image: baosloan/elasticsearch-ik:7.17.28
     container_name: elasticsearch
+    restart: always
     environment:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
@@ -13,7 +14,12 @@ services:
         soft: -1
         hard: -1
     volumes:
+      # 单独挂载配置文件（最安全，保留了官方的主词典）
       - ${PWD}/data:/usr/share/elasticsearch/data
+      - ${PWD}/log:/usr/share/elasticsearch/logs
+      - ${PWD}/ik-config/IKAnalyzer.cfg.xml:/usr/share/elasticsearch/config/analysis-ik/IKAnalyzer.cfg.xml:ro
+      - ${PWD}/ik-config/custom.dic:/usr/share/elasticsearch/config/analysis-ik/custom.dic:ro
+      - ${PWD}/ik-config/stop.dic:/usr/share/elasticsearch/config/analysis-ik/stop.dic:ro
     ports:
       - "9200:9200"
     networks:
@@ -22,12 +28,14 @@ services:
   kibana:
     image: kibana:7.17.28
     container_name: kibana
+    restart: always
     depends_on:
       - elasticsearch
     environment:
       - I18N_LOCALE=zh-CN
       - "TZ=Asia/Shanghai"
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - SERVER_PUBLICBASEURL=http://localhost:5601
     ports:
       - "5601:5601"
     networks:
