--- a/redis/redis-7.2/conf/redis.conf
+++ b/redis/redis-7.2/conf/redis.conf
@@ -505,7 +505,7 @@ replica-priority 100
 # use a very strong password otherwise it will be very easy to break.
 #
 # requirepass foobared
-requirepass gri48fktvyhg
+requirepass 123456
 
 # Command renaming.
 #
