--- a/mysql/mysql-8.4/compose.yaml
+++ b/mysql/mysql-8.4/compose.yaml
@@ -1,6 +1,6 @@
 services:
   mysql:
-    image: mysql:8.4.6
+    image: mysql:8.4.7
     container_name: mysql
     restart: always
     environment:
@@ -12,8 +12,13 @@ services:
     volumes:
       - ${PWD}/conf:/etc/mysql/conf.d
       - ${PWD}/data:/var/lib/mysql
+      - ${PWD}/log:/var/log/mysql
     networks:
       - develop
+
+volumes:
+  data:
+    driver: local
 
 networks:
   develop:
