--- a/nginx/nginx-1.26-centos/compose.yaml
+++ b/nginx/nginx-1.26-centos/compose.yaml
@@ -1,17 +1,19 @@
 services:
   nginx:
-    image: nginx:1.26
+    image: nginx:1.26.3
     container_name: nginx
     restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
+      - ${PWD}/conf/conf.d:/etc/nginx/conf.d
       - ${PWD}/conf/nginx.conf:/etc/nginx/nginx.conf
-      - ${PWD}/html:/usr/share/nginx/html
+      - /Users/kevin/code/php/docker/php7/html:/usr/share/nginx/html
       - ${PWD}/log:/var/log/nginx
     networks:
-      - develop
+      develop:
+        ipv4_address: 10.10.1.1
 
 networks:
   develop:
