--- a/nginx/nginx-1.26-centos/conf/conf.d/www.test.com.conf
+++ b/nginx/nginx-1.26-centos/conf/conf.d/www.test.com.conf
@@ -1,14 +1,15 @@
 server {
         listen       80;
         server_name  www.test.com;
+        root         /var/www/html/test;
+        index        index.php index.html index.htm;
 
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            try_files $uri $uri/ /index.php?$query_string;
         }
 
         #error_page  404              /404.html;
@@ -26,15 +27,13 @@ server {
         #    proxy_pass   http://127.0.0.1;
         #}
 
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
+        # pass the PHP scripts to FastCGI server listening on 10.10.10.1:9000
+        location ~ \.php$ {
+            fastcgi_pass php:9000;  # 通过容器名访问PHP-FPM
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
